# maggie

./: CMakeLists.txt  CMakePresets.json  README.md  exclusion.dic  vcpkg.json
cmake/: maggieConfig.cmake.in
include/maggie/: maggie.h
src/: maggie.cpp  maggie.rc
test/: CMakeLists.txt  test_maggie.cpp
